--- a/ResturantHomePage.html
+++ b/ResturantHomePage.html
@@ -16,8 +16,10 @@
           <a href="#" class="px-4 text-gray-700 hover:text-green-600">Menu</a>
           <a href="#" class="px-4 text-gray-700 hover:text-green-600">Contact</a>
         </nav>
-        <a href="#" class="">Reserve a Table</a>
+        <a href="#" class="ml-auto bg-green-600 text-white py-2 px-4 rounded hover:bg-green-500">Reserve a Table</a>
       </div>
     </header>
+
+    
   </body>
 </html>
