--- a/Oracle/ResturantHomePage.html
+++ b/Oracle/ResturantHomePage.html
@@ -50,6 +50,24 @@
           <h3 class="text-xl font-semibold mt-4">Delicious Pasta</h3>
           <p class="text-gray-600 mt-2">$12.99</p>
       </div>
+      <!--Dish2-->
+      <div class="bg-white rounded-lg shadow-lg p-2">
+          <img src="https://media.istockphoto.com/id/857927726/photo/pasta-with-meat-tomato-sauce-and-vegetables.jpg?s=612x612&w=0&k=20&c=1bcoXcBKM7Hb1ASweDx-vcwXEgy-WrCGM71dVP2Cp0w=" class="w-full h-48 object-cover rounded-t-lg">
+          <h3 class="text-xl font-semibold mt-4">Delicious Pasta</h3>
+          <p class="text-gray-600 mt-2">$12.99</p>
+      </div>
+<!--Dish3-->
+      <div class="bg-white rounded-lg shadow-lg p-2">
+          <img src="https://media.istockphoto.com/id/857927726/photo/pasta-with-meat-tomato-sauce-and-vegetables.jpg?s=612x612&w=0&k=20&c=1bcoXcBKM7Hb1ASweDx-vcwXEgy-WrCGM71dVP2Cp0w=" class="w-full h-48 object-cover rounded-t-lg">
+          <h3 class="text-xl font-semibold mt-4">Delicious Pasta</h3>
+          <p class="text-gray-600 mt-2">$12.99</p>
+      </div>
+      <!--Dish3-->
+      <div class="bg-white rounded-lg shadow-lg p-2">
+          <img src="https://media.istockphoto.com/id/857927726/photo/pasta-with-meat-tomato-sauce-and-vegetables.jpg?s=612x612&w=0&k=20&c=1bcoXcBKM7Hb1ASweDx-vcwXEgy-WrCGM71dVP2Cp0w=" class="w-full h-48 object-cover rounded-t-lg">
+          <h3 class="text-xl font-semibold mt-4">Delicious Pasta</h3>
+          <p class="text-gray-600 mt-2">$12.99</p>
+      </div>
       
 
     </div>
